--- a/TestDemo/Demos/TabControlDemo.xaml
+++ b/TestDemo/Demos/TabControlDemo.xaml
@@ -11,7 +11,7 @@
         <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TabControl Width="300" Height="300" Style="{StaticResource DefaultTabControlStyle}"
                     TabStripPlacement="Left" HorizontalAlignment="Left"
-                    Foreground="#FFFFFF" Background="{StaticResource BlockColor}">
+                    Foreground="#FFFFFF" Background="{StaticResource BlockBrush}">
                 <TabItem Header="First">第一个页面</TabItem>
                 <TabItem Header="Second">第二个页面</TabItem>
                 <TabItem Header="Third">第三个页面</TabItem>
@@ -20,7 +20,7 @@
 
             <TabControl Width="300" Height="300" Style="{StaticResource DefaultTabControlStyle}"
                     TabStripPlacement="Top" HorizontalAlignment="Left" Margin="30,0"
-                    Foreground="#FFFFFF" Background="{StaticResource BlockColor}">
+                    Foreground="#FFFFFF" Background="{StaticResource BlockBrush}">
                 <TabItem Header="First">第一个页面</TabItem>
                 <TabItem Header="Second">第二个页面</TabItem>
                 <TabItem Header="Third">第三个页面</TabItem>
@@ -29,7 +29,7 @@
 
             <TabControl Width="300" Height="300" Style="{StaticResource DefaultTabControlStyle}"
                     TabStripPlacement="Right" HorizontalAlignment="Left" Margin="0,0,30,0"
-                    Foreground="#FFFFFF" Background="{StaticResource BlockColor}">
+                    Foreground="#FFFFFF" Background="{StaticResource BlockBrush}">
                 <TabItem Header="First">第一个页面</TabItem>
                 <TabItem Header="Second">第二个页面</TabItem>
                 <TabItem Header="Third">第三个页面</TabItem>
@@ -38,7 +38,7 @@
 
             <TabControl Width="300" Height="300" Style="{StaticResource DefaultTabControlStyle}"
                     TabStripPlacement="Bottom" HorizontalAlignment="Left"
-                    Foreground="#FFFFFF" Background="{StaticResource BlockColor}">
+                    Foreground="#FFFFFF" Background="{StaticResource BlockBrush}">
                 <TabItem Header="First">第一个页面</TabItem>
                 <TabItem Header="Second">第二个页面</TabItem>
                 <TabItem Header="Third">第三个页面</TabItem>
