ReadMe与小问题修复

--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -58,7 +58,7 @@
                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Padding="{TemplateBinding Padding}"/>
                             <TextBox x:Name="PART_VisiblePassword" Visibility="Collapsed" Padding="{TemplateBinding Padding}"
                                      Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=(assistant:PasswordBoxAssistant.Password),Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                                     BorderThickness="0" Foreground="{TemplateBinding Foreground}" Background="Transparent"
+                                     BorderThickness="0" Foreground="{TemplateBinding Foreground}" Background="Transparent" attached:TextElementAttached.PlaceHolder="{x:Null}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      InputMethod.IsInputMethodEnabled="False" Focusable="True" MaxLength="{TemplateBinding MaxLength}"/>
                             <DockPanel Grid.Column="1" >
@@ -72,8 +72,8 @@
                                               Visibility="{TemplateBinding assistant:PasswordBoxAssistant.IsShowIcon,Converter={toolsConverters:BooleanToVisibilityConverter}}"/>
                                 <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear"
                                         Style="{DynamicResource IconTransparentButtonStyle}"
-                                        attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
-                                        attached:FrameworkElementBaseAttached.IconHeight="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight}"
+                                        attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth,Converter={toolsConverters:ValueTranslateConverter},ConverterParameter=0.7}"
+                                        attached:FrameworkElementBaseAttached.IconHeight="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight,Converter={toolsConverters:ValueTranslateConverter},ConverterParameter=0.7}"
                                         attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
                                         Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"
                                         Foreground="{DynamicResource PrimaryColorTheme}" Background="Transparent" BorderThickness="0">
