--- a/TestDemo/Demos/CheckBoxDemo.xaml
+++ b/TestDemo/Demos/CheckBoxDemo.xaml
@@ -7,8 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
-    <ScrollViewer>
-        <StackPanel VerticalAlignment="Center">
+    <ScrollViewer ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <WrapPanel HorizontalAlignment="Center">
                 <CheckBox Width="220" Height="60" Content="LineCheckBox" ToolTip="LineCheckBox"
                           pc:CheckBoxAssistant.FillBrush="{StaticResource DefaultBackgroundBrush}" 
