Effect And Fixed some bug

--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -29,7 +29,7 @@
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="UseLayoutRounding" Value="True" />
-        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorBaseTemplate}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type PasswordBox}">
@@ -63,7 +63,7 @@
                                      InputMethod.IsInputMethodEnabled="False" Focusable="True" MaxLength="{TemplateBinding MaxLength}"/>
                             <DockPanel Grid.Column="1" >
                                 <ToggleButton x:Name="PART_Icon" DockPanel.Dock="Right" Effect="{x:Null}" ToolTip="Show Password"
-                                              Style="{DynamicResource TransparentIconToggleButtonStyle}"                                         
+                                              Style="{StaticResource TransparentIconToggleButtonStyle}"                                         
                                               attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
                                               attached:FrameworkElementBaseAttached.IconHeight="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight}"
                                               attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource LockGeometry}"
