--- a/CookPopularControl/Themes/PasswordBoxStyle.xaml
+++ b/CookPopularControl/Themes/PasswordBoxStyle.xaml
@@ -16,6 +16,10 @@
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="10"/>
     </Style>
 
+    <Style x:Key="ValidationPasswordBoxStyle" TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource DefaultPasswordBoxStyle}">
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
+    </Style>
+
     <Style x:Key="AddClearButtonPasswordBoxStyle" TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource DefaultPasswordBoxStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="2"/>
         <Setter Property="attached:TextElementAttached.IsAddClearButton" Value="True" />
