--- a/TestDemo/Demos/PasswordBoxDemo.xaml
+++ b/TestDemo/Demos/PasswordBoxDemo.xaml
@@ -34,7 +34,7 @@
                 <PasswordBox Width="300" Height="40" BorderThickness="1"
                              pc:FrameworkElementBaseAttached.CornerRadius="5"
                              InputMethod.InputScope="Password" InputScope="Password"
-                             Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}">
+                             Style="{StaticResource ValidationPasswordBoxStyle}">
                     <pc:PasswordBoxAssistant.Password>
                         <Binding Path="PasswordContent2" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
