--- a/CookPopularControl/Themes/TextBoxStyle.xaml
+++ b/CookPopularControl/Themes/TextBoxStyle.xaml
@@ -13,7 +13,7 @@
     </Style>
 
     <Style x:Key="ValidationTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource DefaultTextBoxStyle}">
-        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorBaseTemplate}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
     </Style>
 
     <Style x:Key="AddClearButtonTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource DefaultTextBoxStyle}">
@@ -24,7 +24,7 @@
     </Style>
 
     <Style x:Key="ValidationAddClearButtonTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource AddClearButtonTextBoxStyle}">
-        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorBaseTemplate}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
     </Style>
 
 </ResourceDictionary>
