--- a/TestDemo/Demos/FieldsDemo.xaml
+++ b/TestDemo/Demos/FieldsDemo.xaml
@@ -18,9 +18,9 @@
             <TextBox Width="300" Height="40" BorderThickness="1" Margin="0,20"
                      Style="{StaticResource ValidationTextBoxStyle}">
                 <TextBox.Text>
-                    <Binding Path="TextContent" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                    <Binding Path="TextContent1" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
-                            <pc:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True"/>
+                            <pc:RegularPatternValidationRule RegularPattern="Digital" ValidatesOnTargetUpdated="True"/>
                         </Binding.ValidationRules>
                     </Binding>
                 </TextBox.Text>
@@ -28,7 +28,7 @@
             <TextBox Width="300" Height="40" BorderThickness="1" Margin="30,0"
                      Style="{StaticResource ValidationAddClearButtonTextBoxStyle}">
                 <TextBox.Text>
-                    <Binding Path="TextContent" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                    <Binding Path="TextContent2" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
                             <pc:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True"/>
                         </Binding.ValidationRules>
